--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -4,21 +4,91 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btnSceneOne"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/configure_scene_1"/>
+        android:orientation="vertical"
+        android:padding="15dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_weight="0.5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Scene 1"/>
+
+            <TextView
+                android:id="@+id/textViewScene1State"
+                android:gravity="right"
+                android:textSize="20sp"
+                android:layout_weight="0.5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                />
 
 
-    <Button
-        android:id="@+id/btnSceneTwo"
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnSceneOne"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/configure"/>
+
+    </LinearLayout>
+
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/configure_scene_2"/>
+        android:orientation="vertical"
+        android:padding="15dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_weight="0.5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Scene 2"/>
+
+            <TextView
+                android:id="@+id/textViewScene2State"
+                android:gravity="right"
+                android:textSize="20sp"
+                android:layout_weight="0.5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                />
+
+
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnSceneTwo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/configure"/>
+
+    </LinearLayout>
 
 
     <Button
+        android:layout_margin="15dp"
         android:id="@+id/btnDone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
