--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,14 +5,8 @@
         android:id="@+id/action_license"
         android:icon="@android:drawable/ic_menu_info_details"
         android:title="@string/license"
-        app:showAsAction="never"
+        app:showAsAction="always"
         />
 
-    <item
-        android:id="@+id/action_configure"
-        android:icon="@android:drawable/ic_menu_preferences"
-        android:title="@string/configure"
-        app:showAsAction="never"
-        />
 
 </menu>
